[package]
name = "mdget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.18"
console = "0.15.7"
chrono = "0.4.26"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
directories = "5.0.1"
toml = "0.7.4"
sha2 = "0.10.6"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true